# mobile_robot_ws

./: .gitignore  Command.txt  README.md
src/autonomous_explorer/: package.xml  setup.py
src/autonomous_explorer/autonomous_explorer/: astar_plan.py  explorer_node.py  pure_pursuit_follow.py  right_wall_follower.py
src/autonomous_explorer/launch/: explorer.launch.py  right_wall.launch.py
src/autonomous_explorer/map/: autosave_20250824_120331.pgm  autosave_20250824_120331.yaml  autosave_20250824_123012.pgm  autosave_20250824_123012.yaml  my_map1.pgm  my_map1.yaml  my_map2.pgm  my_map2.yaml
src/autonomous_explorer/path/: my_route.csv  my_route.yaml
src/autonomous_explorer/path/plots/: pp_error_log.csv
src/robot_description/: package.xml  setup.py
src/robot_description/launch/: spawn_pioneer.launch.py
src/robot_description/urdf/: pioneer2dx.urdf.xacro
src/robot_localization/: package.xml  setup.py
src/robot_localization/config/: amcl.yaml  rviz_config.rviz
src/robot_localization/launch/: localization.launch.py
src/robot_localization/robot_localization/: map_visualizer_node.py
src/robot_rviz/: package.xml  setup.cfg  setup.py
src/robot_rviz/launch/: rviz.launch.py  rviz_minimal.launch.py
src/robot_rviz/rviz/: minimal_base_link.rviz  robot_config.rviz
src/robot_slam/: package.xml  setup.py
src/robot_slam/config/: slam_config.yaml
src/robot_slam/launch/: slam_launch.py
src/robot_slam/robot_slam/: visited_map.py  visited_map_stats.py
src/robot_world/: package.xml  setup.cfg  setup.py
src/robot_world/launch/: maze.launch.py  (+1 more)
(+6 files in other folders)
